fix: tweaked heart position on mobile homepage

--- a/SASS/components/_buttons.scss
+++ b/SASS/components/_buttons.scss
@@ -1,5 +1,3 @@
-
-
 .btn {
   height: 3.125rem;
   border-radius: 50px 50px;
@@ -26,7 +24,7 @@
    color: $black;
    position: absolute;
    top: -17px;
-   left: -30px;
+   left: -10px;
    font-size: 1.5em;
 }
 .icon-empty:hover {
@@ -36,7 +34,7 @@
    color: transparent;
    position: absolute;
    top: -17px;
-   left: -30px;
+   left: -10px;
    font-size: 1.5em;
    transition: color 1.2s ease-out;
 }
