--- a/assets/styles.css
+++ b/assets/styles.css
@@ -168,7 +168,7 @@ a:visited {
   color: #101010;
   position: absolute;
   top: -17px;
-  left: -30px;
+  left: -10px;
   font-size: 1.5em;
 }
 
@@ -180,7 +180,7 @@ a:visited {
   color: transparent;
   position: absolute;
   top: -17px;
-  left: -30px;
+  left: -10px;
   font-size: 1.5em;
   transition: color 1.2s ease-out;
 }
